--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@ spring.application.name=bar
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/bar
-spring.datasource.username=alocal
-spring.datasource.password=1234
+spring.datasource.username=root
+spring.datasource.password=escaes
+spring.output.ansi.enabled=ALWAYS
 
 spring.jdbc.template.show-sql=true
 spring.sql.init.mode=always
